--- a/README.org
+++ b/README.org
@@ -54,6 +54,49 @@ bindings that are still bad with this modification.
 
 
 * Reference
+
+#+BEGIN_SRC
+                                                               Meow Cheatsheet
+
+┏━━━━━━━━━┯━━━━━━━━━┯━━━━━━━━━┯━━━━━━━━━┯━━━━━━━━━┯━━━━━━━━━┯━━━━━━━━━┯━━━━━━━━━┯━━━━━━━━━┯━━━━━━━━━┯━━━━━━━━━┯━━━━━━━━━┯━━━━━━━━━┯━━━━━━━━━━━━━┓
+┃       ~ │       ! │       @ │       # │       $ │       % │       ^ │       & │       * │       ( │       ) │       { │       } │        BKSP ┃
+┃         |         |         |         |         |         |         |         |     case|         |         |         |         |             ┃
+┠─┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┤             ┃
+┃       ` │       1 │       2 │       3 │       4 │       5 │       6 │       7 │       8 │       9 │       0 │       [ │       ] │             ┃
+┃         |    ex →1|    ex →2|    ex →3|    ex →4|    ex →5|    ex →6|    ex →7|    ex →8|    ex →9|    ex →0|         |         |             ┃
+┠─────────┴───┬─────┴───┬─────┴───┬─────┴───┬─────┴───┬─────┴───┬─────┴───┬─────┴───┬─────┴───┬─────┴───┬─────┴───┬─────┴───┬─────┴───┬─────────┨
+┃        TAB  │       " │       < │       > │       P │       Y │       F │       G │       C │       R │       L │       ? │       + │       | ┃
+┃             |    ←find|   ←thing|   thing→|         |         |     ex ←|     ex ↓|     ex ↑|     ex →| undo-sel|         |     +num|         ┃
+┃             ├┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┨
+┃             │       ' │       , │       . │       p │       y │       f │       g │       c │       r │       l │       / │       = │       \ ┃
+┃             |     find|  ←thing→|  [thing]|     join|         |        ←|        ↓|        ↑|        →|     undo|avy-goto…|         |         ┃
+┠─────────────┴─┬───────┴─┬───────┴─┬───────┴─┬───────┴─┬───────┴─┬───────┴─┬───────┴─┬───────┴─┬───────┴─┬───────┴─┬───────┴─┬───────┴─────────┨
+┃               │       A │       O │       E │       U │       I │       D │       H │       T │       N │       S │       _ │             RET ┃
+┃               |         |    [str]|    ←sym→|block-ex…|         |     yank|   insert|      rep|   open ↑|         |       -1│                 ┃
+┃               ├┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┤                 ┃
+┃               │       a │       o │       e │       u │       i │       d │       h │       t │       n │       s │       - │                 ┃
+┃               |     line|    ←str→|   ←word→|    block|   [para]|     save|     ins.|      chg|   open ↓|     kill|   swiper|                 ┃
+┠───────────────┴─────┬───┴─────┬───┴─────┬───┴─────┬───┴─────┬───┴─────┬───┴─────┬───┴─────┬───┴─────┬───┴─────┬───┴─────┬───┴─────────────────┨
+┃                     │       : │       Q │       J │       K │       X │       B │       M │       W │       V │       Z │                     ┃
+┃                     |         |         |         |     ←sym|     sym→|         |         |         |         |         |                     ┃
+┃                     ├┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┼┄┄┄┄┄┄┄┄┄┤                     ┃
+┃                     │       ; │       q │       j │       k │       x │       b │       m │       w │       v │       z │                     ┃
+┃                     |  reverse|     quit|     grab|    ←word|    word→|paren-mo…| quit sel|   repeat|   repeat|  pop-sel|                     ┃
+┗━━━━━━━━━━━━━━━━━━━━━┷━━━━━━━━━┷━━━━━━━━━┷━━━━━━━━━╅─────────┴─────────┴─────────┴─────────╆━━━━━━━━━┷━━━━━━━━━┷━━━━━━━━━┷━━━━━━━━━━━━━━━━━━━━━┛
+                                                    ┃                                   SPC ┃
+                                                    ┃                                       ┃
+                                                    ┃                                       ┃
+                                                    ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
+
+NOTE:
+ex means this command will expand current region.
+←thing→ (inner), [thing] (bounds), ←thing (begin) and thing→ (end) require a THING as input:
+    latex ->  x     round ->  r    square ->  s     curly ->  c    string ->  g
+   symbol ->  e    window ->  w    buffer ->  b paragraph ->  p      line ->  l
+    defun ->  d  sentence ->  .
+    
+#+END_SRC
+
 Row wise, here's what each key does.
 
 ** Top row
